--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url(style/header.css);
 @import url(style/banner.css);
 @import url(style/carrosel.css);
+@import url(style/topicos.css);
+@import url(style/contato.css);
+@import url(style/footer.css);
 
 :root {
   --cor-de-fundo: #EBECEE;
@@ -8,6 +11,11 @@
   --laranja: #EB9800;
   --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins";
+  --azul: #002f52;
+  --font-secundario: "Josefin Sans";
+  --preto: #000000;
+  --cinza: #858585;
+  --cinza-secundario: #474646;
 }
 
 body {
