--- a/style/banner.css
+++ b/style/banner.css
@@ -33,3 +33,23 @@
   background: url("../img/Lupa.svg") no-repeat;
   background-position: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+
+  .banner {
+    padding: 4em 0;
+  }
+
+  .banner__titulo {
+    font-size: 36px;
+  }
+
+  .banner__pesquisa {
+    margin-top: 1em;
+    width: 50%;
+  }
+
+  .banner__pesquisa::placeholder {
+    background-position: 7em;
+  }
+}
