--- a/style/carrosel.css
+++ b/style/carrosel.css
@@ -20,3 +20,92 @@
   position: initial;
   padding: 0.5em 0;
 }
+
+@media screen and (min-width: 1024px) {
+
+  .carrosel__titulo {
+    font-size: 26px;
+    padding-top: 2em;
+  }
+
+  .swiper-pagination {
+    padding: 1em 0 3em;
+  }
+
+  .swiper {
+    width: 70%;
+  }
+
+  .swiper-slide img {
+    width: 70%;
+    padding-bottom: 3em;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+    display: block;
+  }
+}
+
+/********* CSS dos Card ***********/
+
+.card {
+  background: var(--branco);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.card__descricao {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5em 0;
+}
+
+.descricao {
+  margin-bottom: 0.5em;
+}
+
+.descricao__titulo {
+  color: var(--laranja);
+  font-weight: 700;
+}
+
+.descricao__titulo-livro {
+  color: var(--azul);
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0.5em 0;
+}
+
+.descricao__texto {
+  font-size: 14px;
+}
+
+.card__botoes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes {
+  display: flex;
+}
+
+.botoes__items {
+  margin: 0 0.5em;
+}
+
+.botoes__ancora {
+  background-color: var(--laranja);
+  padding: 1em 2.2em;
+  color: var(--branco);
+  font-weight: 700;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    width: 50%;
+    margin: auto auto 2em;
+  }
+}
