--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -1,4 +1,4 @@
-.carrosel__titulo {
+.carrossel__titulo {
   color: var(--laranja);
   background-color: var(--branco);
   text-align: center;
@@ -23,7 +23,7 @@
 
 @media screen and (min-width: 1024px) {
 
-  .carrosel__titulo {
+  .carrossel__titulo {
     font-size: 26px;
     padding-top: 2em;
   }
@@ -45,6 +45,24 @@
     display: block;
   }
 }
+
+@media screen and (min-width: 1728px) {
+    
+  .carrossel__container {
+    display: flex;
+    margin: 0 20vw 3em 20vw;
+    align-items: center;
+  }
+
+  .swiper-pagination {
+    margin: 1em 0;
+  }
+
+  .swiper {
+    width: 60%;
+  }
+}
+
 
 /********* CSS dos Card ***********/
 
@@ -107,5 +125,29 @@
   .card {
     width: 50%;
     margin: auto auto 2em;
+  }
+
+  .botoes__ancora:active {
+    background-color: var(--azul);
+  }
+}
+
+@media screen and (min-width: 1728px) {
+
+  .card {
+    width: 60%;
+    margin: auto 0 0 3em;
+  }
+
+  .descricao__titulo {
+    font-size: 32px;
+  }
+
+  .descricao__texto {
+    font-size: 16px;
+  }
+
+  .descricao {
+    margin-right: 2em;
   }
 }
