--- a/style/header.css
+++ b/style/header.css
@@ -1,7 +1,7 @@
 .cabecalho__menu-hamburguer {
   width: 24px;
   height: 24px;
-  background-image: url(../img/Menu.svg);
+  background-image: url("../img/Menu.svg");
   background-repeat: no-repeat;
   background-position: center;
   display: inline-block;
@@ -35,6 +35,14 @@
   display: none;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburguer {
+  background-image: url(../img/Menu\ Aberto.png);
+}
+
+.container__botao:checked~.container__rotulo {
+  background: var(--azul-degrade);
+}
+
 .container__botao:checked ~ .lista-menu {
   display: block;
 }
@@ -62,6 +70,10 @@
 }
 
 .opcoes {
+  display: none;
+}
+
+.container__texto {
   display: none;
 }
 
@@ -109,7 +121,48 @@
     width: auto;
   }
 
+  .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item {
+    background: var(--azul);
+    color: var(--branco);
+  }
+
+  .opcoes__item {
+    padding: 2em 1em;
+  }
+
+  .lista-menu__item:hover {
+    background: var(--azul-degrade);
+  }
+
+  .lista-menu__item:hover > .lista-menu__link {
+    -webkit-text-fill-color: var(--branco);
+    text-decoration: none;  
+  }
+
   .opcoes__botao {
     display: none;
+  }
+
+}
+
+@media screen and (min-width: 1728px) {
+
+  .cabecalho {
+    padding: 0 2em;
+  }
+
+  .opcoes {
+    margin-right: auto;
+  }
+
+  .container__link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .container__texto {
+    display: block;
   }
 }
