--- a/style/topicos.css
+++ b/style/topicos.css
@@ -45,4 +45,16 @@
   .topicos__item {
     margin: 2.5em 1em;
   }
+
+  .topicos__link:hover {
+    color: var(--laranja);
+    background-color: var(--branco);
+  }
+}
+
+@media screen and (min-width: 1728px) {
+
+  .topicos {
+    padding: 3em 25vw;
+  }
 }
